--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,16 +1,16 @@
 @import "twitter/bootstrap/bootstrap";
-body { 
+body {
 	padding-top: 60px;
 }
 
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
-@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
-@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
+//@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
+//@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
 
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
-// Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not 
+// Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not
 //       have the proper paths. So for now we use the absolute path.
 @fontAwesomeEotPath: '/assets/fontawesome-webfont.eot';
 @fontAwesomeWoffPath: '/assets/fontawesome-webfont.woff';
@@ -30,3 +30,126 @@ body {
 //
 // Example:
 // @linkColor: #ff0000;
+
+// width of definitions lists too small
+.dl-horizontal dt {
+  width: 220px;
+  margin-right: 10px;
+}
+
+.dl-horizontal {
+    dd { .clearfix(); }
+}
+
+// add a ==broad== class for wide text-areas
+textarea.broad,
+.uneditable-input.broad {
+  width: 90%;
+}
+
+// tags should stay white when visited
+span.label a {
+color: #FFF;
+}
+a.btn:visited {
+color: #666;
+}
+a.btn-danger i, a.btn.btn-primary:visited, a.btn.btn-danger:visited {
+color: #FFF;
+}
+
+div.process {
+position:absolute;
+vertical-align:middle;
+min-width:100px;
+max-width:150px;
+font-size:smaller;
+}
+
+div.process a {
+color: #fff;
+}
+
+
+// Descriptions get a nice box ...
+.description {
+  position: relative;
+  margin: 15px 0;
+  padding: 39px 19px 14px;
+  *padding-top: 19px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+
+// ... with a nice header
+.description:after {
+  content: "Beschreibung / Description";
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  padding: 3px 7px;
+  font-size: 12px;
+  font-weight: bold;
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+  color: #9da0a4;
+  -webkit-border-radius: 4px 0 4px 0;
+     -moz-border-radius: 4px 0 4px 0;
+          border-radius: 4px 0 4px 0;
+}
+
+// In the menu the contrast for hover is too low
+.nav > li > a:hover {
+  text-decoration: none;
+  background-color: #888;
+}
+
+// Making all fonts smaller
+@baseFontSize: 12px;
+@baseLineHeight: 17px;
+
+h1 { font-size: 26px; line-height: 32px; }
+h2 { font-size: 22px; line-height: 30px; }
+h3 { font-size: 17px; line-height: 25px; }
+h4 { font-size: 13px; line-height: 17px; }
+h5 { font-size: 11px; line-height: 17px; }
+h6 { font-size: 10px; line-height: 17px; }
+
+h1 small { font-size: 16px; }
+h2 small { font-size: 16px; }
+h3 small { font-size: 13px; }
+h4 small { font-size: 11px; }
+
+// Typography
+@sansFontFamily:        'Ubuntu', sans-serif;
+@serifFontFamily:       Georgia, "Times New Roman", Times, serif;
+@monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
+
+@baseFontFamily:        @sansFontFamily;
+@baseLineHeight:        20px;
+@altFontFamily:         @serifFontFamily;
+
+@headingsFontFamily:    'PT Sans Narrow', sans-serif;
+@headingsFontWeight:    normal;    // instead of browser default, bold
+@headingsColor:         inherit; // empty to use BS default, @textColor
+
+.brand { font-family: @headingsFontFamily}
+
+// Navigation Bar active color
+.nav-list > .active > a,
+.nav-list > .active > a:hover {
+  background-color: #b94a48;
+}
+
+//for Differ
+del.differ {
+  color: #b94a48;
+}
+
+ins.differ{
+  color: #468847;
+  text-decoration: none;
+}
