--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -5,9 +5,9 @@
 
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
-  <dd><%= @assignment.user_id %></dd>
+  <dd><%= @assignment.user.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:role_id) %>:</strong></dt>
-  <dd><%= @assignment.role_id %></dd>
+  <dd><%= @assignment.role.name %></dd>
 </dl>
 
 <div class="form-actions">
