--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Aio" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "AIO" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -44,12 +44,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Aio</a>
+          <a class="brand" href="#">AIO@mittenin.at</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to t("administration"), "/?menu=admin" %></li>
+            </ul>
+            <ul class="nav pull-right">
+              <%= render "admin/dropdown" %>
+              <li><%= link_to "EN", "/?locale=en" %></li>
+              <li><%= link_to icon_("signout") + t("logout"), destroy_user_session_path, :method => :delete, :title => t("logout") %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -60,13 +63,9 @@
       <div class="row-fluid">
         <div class="span3">
           <div class="well sidebar-nav">
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
+            <%= render "sidebars/" + session[:menu] %>
           </div><!--/.well -->
+          <%= domain_helper %>
         </div><!--/span-->
         <div class="span9">
           <%= bootstrap_flash %>
@@ -75,7 +74,7 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <p>&copy; mittenin.at 2012</p>
       </footer>
 
     </div> <!-- /container -->
@@ -84,6 +83,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "application" %>
+    <%= yield :javascript %>
 
   </body>
 </html>
