Views und Controller :Unit, :Customer, :Paymentterm, :Product, :Currency

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,4 +1,13 @@
+<%- model_class = Customer -%>
+<%= bootstrap_error(@customer, model_class ) %>
+
 <%= simple_form_for @customer, :html => { :class => 'form-horizontal' } do |f| %>
+  <% if @customer.company_id %>
+    <%= f.association :company, :disabled => true %>
+  <% else %>
+    <%= f.association :company, :disabled => true, :selected => current_company.id %>
+    <%= f.hidden_field :company_id, :value => current_company.id %>
+  <% end %>
   <%= f.input :title %>
   <%= f.input :academictitle %>
   <%= f.input :lastname %>
@@ -12,7 +21,7 @@
   <%= f.input :mobil %>
   <%= f.input :email %>
   <%= f.input :taxnumber %>
-  <%= f.input :paymentterms %>
+  <%= f.association :paymentterm, :label_method => :shorttext %>
   <%= f.input :customergroup %>
   <%= f.input :taxcode %>
   <%= f.input :salesman %>
@@ -21,7 +30,7 @@
   <%= f.input :contactperson %>
   <%= f.input :discount %>
   <%= f.input :consignee %>
-  <%= f.input :currency %>
+  <%= f.association :currency, :label_method => :shorttext %>
   <%= f.input :created_by %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
