--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -4,6 +4,8 @@
 </div>
 
 <dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:company_id) %>:</strong></dt>
+  <dd><%= @customer.company.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:title) %>:</strong></dt>
   <dd><%= @customer.title %></dd>
   <dt><strong><%= model_class.human_attribute_name(:academictitle) %>:</strong></dt>
@@ -30,8 +32,8 @@
   <dd><%= @customer.email %></dd>
   <dt><strong><%= model_class.human_attribute_name(:taxnumber) %>:</strong></dt>
   <dd><%= @customer.taxnumber %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:paymentterms) %>:</strong></dt>
-  <dd><%= @customer.paymentterms %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:paymentterm_id) %>:</strong></dt>
+  <dd><%= @customer.paymentterm.shorttext %></dd>
   <dt><strong><%= model_class.human_attribute_name(:customergroup) %>:</strong></dt>
   <dd><%= @customer.customergroup %></dd>
   <dt><strong><%= model_class.human_attribute_name(:taxcode) %>:</strong></dt>
@@ -48,8 +50,8 @@
   <dd><%= @customer.discount %></dd>
   <dt><strong><%= model_class.human_attribute_name(:consignee) %>:</strong></dt>
   <dd><%= @customer.consignee %></dd>
-  <dt><strong><%= model_class.human_attribute_name(:currency) %>:</strong></dt>
-  <dd><%= @customer.currency %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:currency_id) %>:</strong></dt>
+  <dd><%= @customer.currency.shorttext %></dd>
   <dt><strong><%= model_class.human_attribute_name(:created_by) %>:</strong></dt>
   <dd><%= @customer.created_by %></dd>
 </dl>
