--- a/app/views/currencies/show.html.erb
+++ b/app/views/currencies/show.html.erb
@@ -11,7 +11,7 @@
   <dt><strong><%= model_class.human_attribute_name(:shorttext) %>:</strong></dt>
   <dd><%= @currency.shorttext %></dd>
 </dl>
-
+<%= versioning_helper(@currency) %>
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               currencies_path, :class => 'btn'  %>
