--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,7 @@
           <div class="container-fluid nav-collapse">
             <ul class="nav">
               <li><%= link_to t("administration"), "/?menu=admin" %></li>
+              <li><%= link_to t("processes"), "/?menu=processes" %></li>
               <li><%= link_to t("application"), "/?menu=application" %></li>
             </ul>
             <ul class="nav pull-right">
