--- a/app/views/shared/_versioning_helper.html.erb
+++ b/app/views/shared/_versioning_helper.html.erb
@@ -1,9 +1,11 @@
-<div class="tab-pane tabbable tabs-left" id="versions">
+<div class="tab-pane tabbable tabs-left <%= "active" if active %>" id="versions">
   <ul class="nav nav-tabs " id="navTab">
     <% object.versions.reverse.each_with_index do |version, i| %>
-      <li <%= "class=active" if i==0 %>>
-        <a href="#<%= l( version.created_at, :format => :id) %>" data-toggle="tab"><%= l( version.created_at, :format => :timestamp ) %></a>
-      </li>
+      <% unless version.changeset.empty? %>
+        <li <%= "class=active" if i==0 %>>
+          <a href="#<%= l( version.created_at, :format => :id) %>" data-toggle="tab"><%= l( version.created_at, :format => :timestamp ) %></a>
+        </li>
+      <% end %>
     <% end %>
   </ul>
 
@@ -16,8 +18,12 @@
             <% version.changeset.each do |changeset| %>
                 <% attribute = object.class.human_attribute_name(changeset[0]) %>
                 <% if changeset[0].include?("_id") %>
-                  <% new_name = object.send(changeset[0].gsub(/_id/,"")).class.find_by_id(changeset[1][1]).name if changeset[1][1] %>
-                  <% old_name = object.send(changeset[0].gsub(/_id/,"")).class.find_by_id(changeset[1][0]).name if changeset[1][0] %>
+                  <% if changeset[1][1] && changeset[0].gsub(/_id/,"") && object.respond_to?(changeset[0].gsub(/_id/,"")) %>
+                    <% new_name = object.send(changeset[0].gsub(/_id/,"")).class.find_by_id(changeset[1][1]).name  %>
+                  <% end %>
+                  <% if changeset[1][0] && changeset[0].gsub(/_id/,"")  && object.respond_to?(changeset[0].gsub(/_id/,"")) %>
+                    <% old_name = object.send(changeset[0].gsub(/_id/,"")).class.find_by_id(changeset[1][0]).name  %>
+                  <% end %>
                   <% diff = Differ.diff_by_line(new_name.to_s || "", old_name.to_s || "") %>
                 <% else %>
                   <% diff = Differ.diff_by_char(changeset[1][1].to_s || "", changeset[1][0].to_s || "") %>
