FA-Kopf und Position

--- a/app/views/paymentterms/index.html.erb
+++ b/app/views/paymentterms/index.html.erb
@@ -29,6 +29,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t('.new', :default => t("helpers.links.new"), :model => model_class.model_name.human),
             new_paymentterm_path,
             :class => 'btn btn-primary' %>
