--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -31,6 +31,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t('.new', :default => t("helpers.links.new"), :model => model_class.model_name.human),
             new_unit_path,
             :class => 'btn btn-primary' %>
