--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -38,6 +38,6 @@
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
+<%= link_to t('.new', :default => t("helpers.links.new"), :model => model_class.model_name.human),
             new_customer_path,
             :class => 'btn btn-primary' %>
