--- a/app/views/invoice_headers/_form.html.erb
+++ b/app/views/invoice_headers/_form.html.erb
@@ -1,25 +1,30 @@
-<%= simple_form_for(@invoice_header) do |f| %>
-  <%= f.error_notification %>
+<%- model_class = InvoiceHeader -%>
+<%= bootstrap_error(@invoice_header, model_class ) %>
 
-  <div class="form-inputs">
-    <%= f.input :company_id %>
-    <%= f.input :customer_id %>
-    <%= f.input :reference_number %>
-    <%= f.input :currency_id %>
-    <%= f.input :created_by %>
-    <%= f.input :consignee %>
-    <%= f.input :dicount %>
-    <%= f.input :discountvalue_header %>
-    <%= f.input :discountvalue_position %>
-    <%= f.input :taxvalue_full %>
-    <%= f.input :taxvalue_half %>
-    <%= f.input :valuevalue_netto_full %>
-    <%= f.input :value_netto_half %>
-    <%= f.input :value_netto %>
-    <%= f.input :value_payed %>
-  </div>
-
+<%= simple_form_for @invoice_header, :html => { :class => 'form-horizontal' } do |f| %>
+  <% if @invoice_header.company_id %>
+    <%= f.association :company, :disabled => true %>
+  <% else %>
+    <%= f.association :company, :disabled => true, :selected => current_company.id %>
+    <%= f.hidden_field :company_id, :value => current_company.id %>
+  <% end %>
+  <%= f.association :customer, :label_method => :lastname %>
+  <%= f.input :reference_number %>
+  <%= f.association :currency, :label_method => :shorttext %>
+  <%= f.input :created_by %>
+  <%= f.input :consignee %>
+  <%= f.input :dicount %>
+  <%= f.input :discountvalue_header %>
+  <%= f.input :discountvalue_position %>
+  <%= f.input :taxvalue_full %>
+  <%= f.input :taxvalue_half %>
+  <%= f.input :valuevalue_netto_full %>
+  <%= f.input :value_netto_half %>
+  <%= f.input :value_netto %>
+  <%= f.input :value_payed %>
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, :class => 'btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                invoice_header_path, :class => 'btn' %>
   </div>
 <% end %>
