--- a/app/views/invoice_headers/show.html.erb
+++ b/app/views/invoice_headers/show.html.erb
@@ -1,80 +1,49 @@
-<p id="notice"><%= notice %></p>
+<%- model_class = InvoiceHeader -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Company:</b>
-  <%= @invoice_header.company_id %>
-</p>
-
-<p>
-  <b>Customer:</b>
-  <%= @invoice_header.customer_id %>
-</p>
-
-<p>
-  <b>Reference number:</b>
-  <%= @invoice_header.reference_number %>
-</p>
-
-<p>
-  <b>Currency:</b>
-  <%= @invoice_header.currency_id %>
-</p>
-
-<p>
-  <b>Created by:</b>
-  <%= @invoice_header.created_by %>
-</p>
-
-<p>
-  <b>Consignee:</b>
-  <%= @invoice_header.consignee %>
-</p>
-
-<p>
-  <b>Dicount:</b>
-  <%= @invoice_header.dicount %>
-</p>
-
-<p>
-  <b>Discountvalue header:</b>
-  <%= @invoice_header.discountvalue_header %>
-</p>
-
-<p>
-  <b>Discountvalue position:</b>
-  <%= @invoice_header.discountvalue_position %>
-</p>
-
-<p>
-  <b>Taxvalue full:</b>
-  <%= @invoice_header.taxvalue_full %>
-</p>
-
-<p>
-  <b>Taxvalue half:</b>
-  <%= @invoice_header.taxvalue_half %>
-</p>
-
-<p>
-  <b>Valuevalue netto full:</b>
-  <%= @invoice_header.valuevalue_netto_full %>
-</p>
-
-<p>
-  <b>Value netto half:</b>
-  <%= @invoice_header.value_netto_half %>
-</p>
-
-<p>
-  <b>Value netto:</b>
-  <%= @invoice_header.value_netto %>
-</p>
-
-<p>
-  <b>Value payed:</b>
-  <%= @invoice_header.value_payed %>
-</p>
-
-
-<%= link_to 'Edit', edit_invoice_header_path(@invoice_header) %> |
-<%= link_to 'Back', invoice_headers_path %>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:company_id) %>:</strong></dt>
+  <dd><%= @invoice_header.company.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:customer_id) %>:</strong></dt>
+  <dd><%= @invoice_header.customer.lastname %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:reference_number) %>:</strong></dt>
+  <dd><%= @invoice_header.reference_number %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:currency_id) %>:</strong></dt>
+  <dd><%= @invoice_header.currency.shorttext %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:created_by) %>:</strong></dt>
+  <dd><%= @invoice_header.created_by %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:consignee) %>:</strong></dt>
+  <dd><%= @invoice_header.consignee %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:dicount) %>:</strong></dt>
+  <dd><%= @invoice_header.dicount %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:discountvalue_header) %>:</strong></dt>
+  <dd><%= @invoice_header.discountvalue_header %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:discountvalue_position) %>:</strong></dt>
+  <dd><%= @invoice_header.discountvalue_position %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:taxvalue_full) %>:</strong></dt>
+  <dd><%= @invoice_header.taxvalue_full %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:taxvalue_half) %>:</strong></dt>
+  <dd><%= @invoice_header.taxvalue_half %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:valuevalue_netto_full) %>:</strong></dt>
+  <dd><%= @invoice_header.valuevalue_netto_full %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:value_netto_half) %>:</strong></dt>
+  <dd><%= @invoice_header.value_netto_half %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:value_netto) %>:</strong></dt>
+  <dd><%= @invoice_header.value_netto %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:value_payed) %>:</strong></dt>
+  <dd><%= @invoice_header.value_payed %></dd>
+</dl>
+<%= versioning_helper(@invoice_header) %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              invoice_header_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_invoice_header_path(@invoice_header), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              invoice_header_path(@invoice_header),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
