--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,28 +1,25 @@
-<%- model_class = InvoiceHeader -%>
+<%- model_class = Page -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human(:count => 2) %></h1>
 </div>
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:customer_id) %></th>
-      <th><%= model_class.human_attribute_name(:reference_number) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
   </thead>
   <tbody>
-    <% @invoice_headers.each do |invoice_header| %>
+    <% @pages.each do |page| %>
       <tr>
-        <td><%= link_to invoice_header.id, invoice_header_path(invoice_header) %></td>
-        <td><%= invoice_header.customer.lastname %></td>
-        <td><%= invoice_header.reference_number %></td>
-
+        <td><%= link_to page.name, page_path(page) %></td>
+        <td><%=l page.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_invoice_header_path(invoice_header), :class => 'btn btn-mini' %>
+                      edit_page_path(page), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      invoice_header_path(invoice_header),
+                      page_path(page),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
@@ -32,7 +29,6 @@
   </tbody>
 </table>
 
-
 <%= link_to t('.new', :default => t("helpers.links.new"), :model => model_class.model_name.human),
-            new_invoice_header_path,
+            new_page_path,
             :class => 'btn btn-primary' %>
