--- a/app/views/sidebars/_admin.html.erb
+++ b/app/views/sidebars/_admin.html.erb
@@ -15,4 +15,5 @@
   <li <%= active("paymentterms") %>><%= link_to icons(["money", "calendar"]) + t("activerecord.models.paymentterm.other"), paymentterms_path %></li>
   <li <%= active("products") %>><%= link_to icon_("gift") + t("activerecord.models.product.other"), products_path %></li>
   <li <%= active("units") %>><%= link_to icon_("beaker") + t("activerecord.models.unit.other"), units_path %></li>
+  <li <%= active("pages") %>><%= link_to icon_("file") + t("activerecord.models.page.other"), pages_path %></li>
 </ul>
