--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,10 +12,9 @@
   <%= f.input :eannumber %>
   <%= f.input :taxcode %>
   <%= f.input :deletionflag %>
-  <%= f.input :baseunit %>
+  <%= f.association :unit, :label_method => :shorttext %>
   <%= f.input :salesprice %>
   <%= f.input :purchaseprice %>
-  <%= f.input :created_by %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
