--- a/app/views/admin/_navbar.html.erb
+++ b/app/views/admin/_navbar.html.erb
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">AIO@mittenin.at</a>
+      <a class="brand" href="/">AIO@mittenin.at</a>
       <div class="container-fluid nav-collapse">
         <ul class="nav">
           <li><%= link_to t("administration"), "/?menu=admin" %></li>
