first running process

--- a/app/views/shared/_versioning_helper.html.erb
+++ b/app/views/shared/_versioning_helper.html.erb
@@ -18,10 +18,17 @@
             <% version.changeset.each do |changeset| %>
                 <% attribute = object.class.human_attribute_name(changeset[0]) %>
                 <% if changeset[0].include?("_id") %>
-                  <% if changeset[1][1] && changeset[0].gsub(/_id/,"") && object.respond_to?(changeset[0].gsub(/_id/,"")) %>
+
+                  <% if changeset[1][1] &&
+                        changeset[0].gsub(/_id/,"") &&
+                        object.respond_to?(changeset[0].gsub(/_id/,"")) &&
+                        object.send(changeset[0].gsub(/_id/,"")) %>
                     <% new_name = object.send(changeset[0].gsub(/_id/,"")).class.find_by_id(changeset[1][1]).name  %>
                   <% end %>
-                  <% if changeset[1][0] && changeset[0].gsub(/_id/,"")  && object.respond_to?(changeset[0].gsub(/_id/,"")) %>
+                  <% if changeset[1][0] &&
+                        changeset[0].gsub(/_id/,"")  &&
+                        object.respond_to?(changeset[0].gsub(/_id/,"")) &&
+                        object.send(changeset[0].gsub(/_id/,"")) %>
                     <% old_name = object.send(changeset[0].gsub(/_id/,"")).class.find_by_id(changeset[1][0]).name  %>
                   <% end %>
                   <% diff = Differ.diff_by_line(new_name.to_s || "", old_name.to_s || "") %>
