--- a/app/views/steps/show.html.erb
+++ b/app/views/steps/show.html.erb
@@ -6,6 +6,8 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
   <dd><%= @step.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:default_start) %>:</strong></dt>
+  <dd><%= checkbox(@step.default_start) %></dd>
   <dt><strong><%= model_class.human_attribute_name(:company_id) %>:</strong></dt>
   <dd><%= @step.company.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:created_by) %>:</strong></dt>
