--- a/app/views/tokens/show_waiting.html.erb
+++ b/app/views/tokens/show_waiting.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Token -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human(:count => 2) %></h1>
+  <h1><%= t("activerecord.models.token.waiting") %></h1>
 </div>
 <table class="table table-striped">
   <thead>
@@ -12,7 +12,6 @@
       <th><%= model_class.human_attribute_name(:step_id) %></th>
       <th><%= model_class.human_attribute_name(:created_by) %></th>
       <th><%= model_class.human_attribute_name(:updated_by) %></th>
-      <th><%= model_class.human_attribute_name(:token_status_id) %></th>
       <th><%= model_class.human_attribute_name(:last_step_id) %></th>
       <th><%= model_class.human_attribute_name(:object_id) %></th>
       <th><%= model_class.human_attribute_name(:version) %></th>
@@ -29,18 +28,12 @@
         <td><%= token.step.name if token.step %></td>
         <td><%= created(token) %></td>
         <td><%= updated(token) %></td>
-        <td><%= token.token_status.name %></td>
         <td><%= token.last_step.name if token.last_step %></td>
         <td><%= token.object_id %></td>
         <td><%= token.versions.last.index %></td>
         <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_token_path(token), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      token_path(token),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
+          <%= link_to t('.create_process_instance', :default => t("helpers.links.new"), :model => "Process Instance"),
+                      create_aio_process_instances_path(:token => token.id), :method => :post, :class => 'btn btn-mini'  %>
         </td>
       </tr>
     <% end %>
