--- a/app/views/paymentterms/show.html.erb
+++ b/app/views/paymentterms/show.html.erb
@@ -21,9 +21,9 @@
   <dt><strong><%= model_class.human_attribute_name(:day3) %>:</strong></dt>
   <dd><%= @paymentterm.day3 %></dd>
   <dt><strong><%= model_class.human_attribute_name(:created_by) %>:</strong></dt>
-  <dd><%= created(@paymentterm) %>  
+  <dd><%= created(@paymentterm) %>
 </dl>
-<%= versioning_helper(@currency) %>
+<%= versioning_helper(@paymentterm) %>
 <div class="form-actions">
   <%= link_to t('.back', :default => t("helpers.links.back")),
               paymentterms_path, :class => 'btn'  %>
